; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_gmr.c_vmw_gmr2_unbind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_gmr.c_vmw_gmr2_unbind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmw_private = type { i32 }
%struct.TYPE_3__ = type { i32, i64 }

@SVGA_CMD_DEFINE_GMR2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vmw_private*, i32)* @vmw_gmr2_unbind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vmw_gmr2_unbind(%struct.vmw_private* %0, i32 %1) #0 {
  %3 = alloca %struct.vmw_private*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.vmw_private* %0, %struct.vmw_private** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 20, i32* %6, align 4
  %8 = load %struct.vmw_private*, %struct.vmw_private** %3, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32* @VMW_FIFO_RESERVE(%struct.vmw_private* %8, i32 %9)
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = icmp eq i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i64 @unlikely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  br label %29

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 %18, i32* %19, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i64 0, i64* %20, align 8
  %21 = load i32, i32* @SVGA_CMD_DEFINE_GMR2, align 4
  %22 = load i32*, i32** %7, align 8
  %23 = getelementptr inbounds i32, i32* %22, i32 1
  store i32* %23, i32** %7, align 8
  store i32 %21, i32* %22, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @memcpy(i32* %24, %struct.TYPE_3__* %5, i32 16)
  %26 = load %struct.vmw_private*, %struct.vmw_private** %3, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @vmw_fifo_commit(%struct.vmw_private* %26, i32 %27)
  br label %29

29:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32* @VMW_FIFO_RESERVE(%struct.vmw_private*, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @memcpy(i32*, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @vmw_fifo_commit(%struct.vmw_private*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
